add logo section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link rel="stylesheet" href="./styles/font.css" />
   </head>
-  <body>
-    <main>
-      
-    </main>
+  <body class="bg-stone-900 max-w-full h-screen">
+    <div
+      class="w-md h-screen bg-white mx-auto flex items-center justify-center"
+    >
+      <!-- logo here  -->
+      <div class="logo-section relative flex items-center justify-center">
+        <div class="absolute w-44 top-0 z-0">
+          <img src="./assets/bg.png" alt="" />
+        </div>
+        <div class="mt-4 z-10">
+          <img class="w-14" src="./assets/Group.png" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
