--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <div class="w-4/12 h-screen bg-white mx-auto flex flex-col justify-center">
       <!-- logo here  -->
       <div class="logo-section relative flex items-center justify-center">
-        <div class="absolute w-44 top-0 z-0">
+        <div class="absolute w-60 top-0 z-0">
           <img src="./assets/bg.png" alt="" />
         </div>
-        <div class="mt-4 z-10">
+        <div class="mt-5 z-10">
           <img class="w-14" src="./assets/Group.png" alt="" />
         </div>
       </div>
       <!-- login section  -->
 
-      <div class="bg-base-100 shadow-2xl mt-5 mx-5">
+      <div class="bg-base-100 shadow-2xl mt-8 mx-5 rounded-xl">
         <div class="card-body">
           <fieldset class="fieldset">
             <label class="label font-medium text-sm text-black">Mobile Number</label>
