--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <link rel="stylesheet" href="./styles/font.css" />
   </head>
   <body class="bg-stone-900 max-w-full h-screen outfit">
-    <div class="w-4/12 h-screen bg-white mx-auto flex flex-col justify-center">
+    <div
+      class="max-w-sm h-screen bg-white mx-auto flex flex-col justify-center"
+    >
       <!-- logo here  -->
       <div class="logo-section relative flex items-center justify-center">
         <div class="absolute w-60 top-0 z-0">
@@ -39,23 +41,36 @@
       <div class="bg-base-100 shadow-2xl mt-8 mx-5 rounded-xl">
         <div class="card-body">
           <fieldset class="fieldset">
-            <label class="label font-medium text-sm text-black">Mobile Number</label>
+            <label class="label font-medium text-sm text-black"
+              >Mobile Number</label
+            >
             <input
+              value="01571300962"
               type="number"
-              class="input w-full"
+              class="input inputNumber w-full"
               placeholder="Enter your number"
             />
-            <label class="label font-medium text-sm text-black">4 Digit Pin</label>
+            <label class="label font-medium text-sm text-black"
+              >4 Digit Pin</label
+            >
             <input
+              value="ashutosh"
               type="password"
-              class="input w-full"
+              class="input inputPassword w-full"
               placeholder="Enter 4 Digit Pin"
             />
             <!-- <div><a class="link link-hover">Forgot password?</a></div> -->
-            <button class="btn bg-blue-700 text-white mt-4 text-xl rounded-3xl">Login</button>
+            <button
+              id="loginBtn"
+              class="btn bg-blue-700 text-white mt-4 text-xl rounded-3xl"
+            >
+              Login
+            </button>
           </fieldset>
         </div>
       </div>
     </div>
+
+    <script src="./scripts/login.js"></script>
   </body>
 </html>
