added add money section & add main.js file

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               type="number"
               class="input inputNumber w-full"
               placeholder="Enter your number"
+              required
             />
             <label class="label font-medium text-sm text-black"
               >4 Digit Pin</label
@@ -58,6 +59,7 @@
               type="password"
               class="input inputPassword w-full"
               placeholder="Enter 4 Digit Pin"
+              required
             />
             <!-- <div><a class="link link-hover">Forgot password?</a></div> -->
             <button
