midify fildset to form

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="bg-base-100 shadow-2xl mt-8 mx-5 rounded-xl">
         <div class="card-body">
-          <fieldset class="fieldset">
+          <form class="">
             <label class="label font-medium text-sm text-black"
               >Mobile Number</label
             >
@@ -68,7 +68,7 @@
             >
               Login
             </button>
-          </fieldset>
+          </form>
         </div>
       </div>
     </div>
