--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
           <!-- add money form  -->
           <div class="bg-base-100 shadow-2xl my-8 rounded-xl">
             <div class="card-body">
-              <fieldset class="fieldset">
+              <form class="fieldset">
                 <label class="label font-medium text-sm text-black"
                   >Select A Bank</label
                 >
@@ -165,7 +165,7 @@
                 >
                   Add Money
                 </button>
-              </fieldset>
+              </form>
             </div>
           </div>
         </section>
